--- a/ProjectSquad/Base.lproj/Main.storyboard
+++ b/ProjectSquad/Base.lproj/Main.storyboard
@@ -252,10 +252,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RequestCell" rowHeight="202" id="1Ii-rS-dlp" customClass="RequestCell" customModule="ProjectSquad" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="92" width="600" height="133"/>
+                                <rect key="frame" x="0.0" y="92" width="600" height="202"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1Ii-rS-dlp" id="TGy-BE-JT2">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="132.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="201.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Squad name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h8B-Rg-OgC">
@@ -267,15 +267,15 @@
                                                 <rect key="frame" x="130" y="8" width="141" height="23"/>
                                             </variation>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fAu-27-fXN">
-                                            <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dyJ-2A-eTh">
+                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
                                             <variation key="widthClass=compact" fixedFrame="YES">
-                                                <rect key="frame" x="352" y="168" width="22" height="22"/>
+                                                <rect key="frame" x="43" y="135" width="302" height="21"/>
                                             </variation>
-                                            <connections>
-                                                <action selector="acceptRequest:" destination="1Ii-rS-dlp" eventType="touchUpInside" id="woX-5s-9yN"/>
-                                            </connections>
-                                        </button>
+                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Leader name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wFD-V4-lkI">
                                             <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
@@ -312,36 +312,48 @@
                                                 <rect key="frame" x="146" y="97" width="198" height="21"/>
                                             </variation>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dyJ-2A-eTh">
-                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fAu-27-fXN">
+                                            <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                             <variation key="widthClass=compact" fixedFrame="YES">
-                                                <rect key="frame" x="43" y="135" width="302" height="21"/>
+                                                <rect key="frame" x="336" y="164" width="22" height="22"/>
                                             </variation>
-                                        </label>
+                                            <connections>
+                                                <action selector="acceptRequest:" destination="1Ii-rS-dlp" eventType="touchUpInside" id="woX-5s-9yN"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MOD-9o-fm7">
+                                            <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                            <state key="normal" title="Delete"/>
+                                            <variation key="widthClass=compact" fixedFrame="YES">
+                                                <rect key="frame" x="231" y="164" width="77" height="22"/>
+                                            </variation>
+                                            <connections>
+                                                <action selector="deleteRequest:" destination="1Ii-rS-dlp" eventType="touchUpInside" id="weA-4M-dCa"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <variation key="default">
                                         <mask key="subviews">
                                             <exclude reference="h8B-Rg-OgC"/>
-                                            <exclude reference="fAu-27-fXN"/>
+                                            <exclude reference="dyJ-2A-eTh"/>
                                             <exclude reference="wFD-V4-lkI"/>
                                             <exclude reference="jBR-pc-GfT"/>
                                             <exclude reference="UJl-nU-4mj"/>
                                             <exclude reference="c3H-d3-UmQ"/>
-                                            <exclude reference="dyJ-2A-eTh"/>
+                                            <exclude reference="fAu-27-fXN"/>
+                                            <exclude reference="MOD-9o-fm7"/>
                                         </mask>
                                     </variation>
                                     <variation key="widthClass=compact">
                                         <mask key="subviews">
                                             <include reference="h8B-Rg-OgC"/>
-                                            <include reference="fAu-27-fXN"/>
+                                            <include reference="dyJ-2A-eTh"/>
                                             <include reference="wFD-V4-lkI"/>
                                             <include reference="jBR-pc-GfT"/>
                                             <include reference="UJl-nU-4mj"/>
                                             <include reference="c3H-d3-UmQ"/>
-                                            <include reference="dyJ-2A-eTh"/>
+                                            <include reference="fAu-27-fXN"/>
+                                            <include reference="MOD-9o-fm7"/>
                                         </mask>
                                     </variation>
                                 </tableViewCellContentView>
@@ -351,7 +363,6 @@
                                     <outlet property="squadGoalsLabel" destination="dyJ-2A-eTh" id="XIW-rJ-TFW"/>
                                     <outlet property="squadNameLabel" destination="h8B-Rg-OgC" id="q2S-Mb-IZi"/>
                                     <outlet property="timeLabel" destination="c3H-d3-UmQ" id="hCe-YL-u26"/>
-                                    <segue destination="bHH-bg-23o" kind="presentation" identifier="joinedSquadSegue" id="x6J-C1-b8T"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -360,10 +371,13 @@
                             <outlet property="delegate" destination="mKb-dS-oTE" id="Vd7-Vp-Yvu"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <segue destination="bHH-bg-23o" kind="presentation" identifier="joinedSquadSegue" id="MRK-qw-gKp"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zvc-vl-u8H" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-508.5" y="1469"/>
+            <point key="canvasLocation" x="-313.5" y="1483"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="61s-9L-70v">
@@ -658,14 +672,11 @@
                         <viewControllerLayoutGuide type="bottom" id="5PZ-wV-ZDV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bI-Rv-97t">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="wai-4j-O2j">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="0.0" y="20" width="400" height="580"/>
-                                </variation>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -717,7 +728,7 @@
                         <viewControllerLayoutGuide type="bottom" id="tV4-3y-3DU"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="OPa-eV-wpj">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -751,7 +762,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="x6J-C1-b8T"/>
+        <segue reference="MRK-qw-gKp"/>
         <segue reference="Ubv-iq-Aj8"/>
     </inferredMetricsTieBreakers>
 </document>
