--- a/ProjectSquad/Base.lproj/LaunchScreen.storyboard
+++ b/ProjectSquad/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,12 +17,42 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="SquadIconLarge" translatesAutoresizingMaskIntoConstraints="NO" id="ZUf-xB-guH">
+                                <rect key="frame" x="180" y="167" width="240" height="128"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ZUf-xB-guH" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Juw-1X-lF5"/>
+                            <constraint firstItem="ZUf-xB-guH" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="139" id="YBd-a1-LOT"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="ZUf-xB-guH" secondAttribute="bottom" constant="206" id="gbN-pI-tbf"/>
+                            <constraint firstItem="ZUf-xB-guH" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="55" id="uFa-I2-dZf"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Juw-1X-lF5"/>
+                                <exclude reference="YBd-a1-LOT"/>
+                                <exclude reference="uFa-I2-dZf"/>
+                                <exclude reference="gbN-pI-tbf"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="Juw-1X-lF5"/>
+                                <include reference="YBd-a1-LOT"/>
+                                <include reference="uFa-I2-dZf"/>
+                                <include reference="gbN-pI-tbf"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="-12" y="383"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="SquadIconLarge" width="1000" height="1000"/>
+    </resources>
 </document>
