--- a/ProjectSquad/Base.lproj/LaunchScreen.storyboard
+++ b/ProjectSquad/Base.lproj/LaunchScreen.storyboard
@@ -18,8 +18,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="SquadIconLarge" translatesAutoresizingMaskIntoConstraints="NO" id="ZUf-xB-guH">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="SquadIconLarge" translatesAutoresizingMaskIntoConstraints="NO" id="ZUf-xB-guH">
                                 <rect key="frame" x="180" y="167" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="1vW-Mv-SPv"/>
+                                    <constraint firstAttribute="width" constant="250" id="i2y-0b-nln"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="1vW-Mv-SPv"/>
+                                        <exclude reference="i2y-0b-nln"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="1vW-Mv-SPv"/>
+                                        <include reference="i2y-0b-nln"/>
+                                    </mask>
+                                </variation>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
